Fix small stylistic issues
Problem: some elements on Upload page are misaligned.

Solution: fix it.

--- a/frontend/src/pages/upload/UploadPage.scss
+++ b/frontend/src/pages/upload/UploadPage.scss
@@ -64,7 +64,7 @@
 
   &__label {
     grid-row: 5/6;
-    grid-column: 1/2;
+    grid-column: 2/3;
     margin-top: 40 * $px;
     font-size: 12 * $px;
     line-height: 14 * $px;
